fixed hamburger menu on mobile - notes in notebook

--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -155,7 +155,7 @@ $max-width: $x-large !default;
 /*
    BC hack for masthead menu
    ========================================================================== */
-$max-width-mast: 1300px !default;
+/*$max-width-mast: 1300px !default; */
 
 /*
    Grid
